--- a/GangOfFour/structural/decorator/pom.xml
+++ b/GangOfFour/structural/decorator/pom.xml
@@ -1,19 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
+  <parent>
+    <groupId>tutorial.abengalicoder</groupId>
+    <artifactId>structural</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
   <groupId>tutorial.abengalicoder</groupId>
-  <artifactId>GangOfFour</artifactId>
+  <artifactId>decorator</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-
-  <name>GangOfFour</name>
+  <name>decorator</name>
   <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,9 +23,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <modules>
-  	<module>creational</module>
-  	<module>structural</module>
-  	<module>behaviour</module>
-  </modules>
 </project>
