--- a/GangOfFour/structural/Adapter/pom.xml
+++ b/GangOfFour/structural/Adapter/pom.xml
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>tutorial.abengalicoder</groupId>
-    <artifactId>GangOfFour</artifactId>
+    <artifactId>structural</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <packaging>pom</packaging>
   <groupId>tutorial.abengalicoder</groupId>
-  <artifactId>structural</artifactId>
+  <artifactId>Adapter</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>structural</name>
+  <name>Adapter</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,10 +23,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <modules>
-  	<module>decorator</module>
-    <module>FacadePattern</module>
-    <module>Bridge</module>
-    <module>Adapter</module>
-  </modules>
 </project>
