A-Bengali-Coder says: composite

--- a/GangOfFour/structural/pom.xml
+++ b/GangOfFour/structural/pom.xml
@@ -28,5 +28,6 @@
     <module>FacadePattern</module>
     <module>Bridge</module>
     <module>Adapter</module>
+    <module>composite</module>
   </modules>
 </project>
