--- a/GangOfFour/structural/pom.xml
+++ b/GangOfFour/structural/pom.xml
@@ -29,5 +29,6 @@
     <module>Bridge</module>
     <module>Adapter</module>
     <module>composite</module>
+    <module>fly-weight</module>
   </modules>
 </project>
