A-Bengali-Coder says: proxy

--- a/GangOfFour/structural/pom.xml
+++ b/GangOfFour/structural/pom.xml
@@ -30,5 +30,6 @@
     <module>Adapter</module>
     <module>composite</module>
     <module>fly-weight</module>
+    <module>proxy</module>
   </modules>
 </project>
