--- a/GangOfFour/pom.xml
+++ b/GangOfFour/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
   </properties>
 
   <dependencies>
