--- a/GangOfFour/creational/pom.xml
+++ b/GangOfFour/creational/pom.xml
@@ -25,5 +25,6 @@
   	<module>singleton</module>
     <module>Builder</module>
     <module>Factory</module>
+    <module>AbstractFactory</module>
   </modules>
 </project>
